# project-manager-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  poetry.toml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 2026_05_17_18_47_358de51fc981_create_initial_tables.py  2026_05_18_20_57_375a7c3ba3b0_add_roles_table.py  2026_05_19_05_17_8d7015eb2291_create_tables.py  2026_06_12_04_35_14a7244eef7f_add_unique_constraint_to_role_name.py  2026_06_12_04_40_ebf1b81e9044_seed_default_roles.py
app/: main.py
app/core/: config.py  database.py  dependencies.py  security.py
app/core/storage/: base.py  local.py  s3.py
app/models/: base.py  document.py  project.py  project_member.py  role.py  user.py
app/repositories/: document.py  project.py  project_member.py  role.py  user.py
app/routers/: document.py  project.py  user.py
app/schemas/: document.py  project.py  project_member.py  role.py  user.py
app/services/: document.py  project.py  user.py
app/services/project/: project.py
app/services/project/storage/: base.py  factory.py  local.py
tests/builders/: project_service_builder.py
tests/routers/: test_project_router.py
tests/services/: test_project_service.py  test_user_service.py
