[tool.poetry]
package-mode = false

[project]
name = "project-manager-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon Lema",email = "simonlema97@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "boto3 (>=1.43.8,<2.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "argon2-cffi (>=25.1.0,<26.0.0)",
    "python-multipart",
    "email-validator (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "ruff (>=0.15.13,<0.16.0)",
    "black (>=26.3.1,<27.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
